# ChangeLog for x11-libs/qt
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
  Added qt3support flag description.

  27 Jun 2009; Ben de Groot <yngwin@gentoo.org> qt-4.5.2.ebuild:
  Do not enable useflags by default that are in desktop profile

*qt-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org> +qt-4.5.2.ebuild:
  Version bump to 4.5.2

  11 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -files/0001-dnd_optimization.patch, -files/qt-3.3.8-mips.patch,
  -files/0002-dnd_active_window_fix.patch,
  -files/qt-3.3.8-seli-xinerama.patch,
  -files/0038-dragobject-dont-prefer-unknown.patch,
  -files/qt-3.3.8-uic-fix.patch,
  -files/0044-qscrollview-windowactivate-fix.diff,
  -files/qt-3.3.8-visibility.patch, -files/0047-fix-kmenu-widget.diff,
  -files/qt-3.3.8-fix-compiler-detection.patch, -qt-3.3.8b-r2.ebuild,
  -files/0048-qclipboard_hack_80072.patch,
  -files/qt-3.3.8-immqt+gcc-4.3.patch, -files/qt-3.3.8b-cjk-fix.patch,
  -files/qt-ulibc.patch:
  I hope they are gone now

  11 Jun 2009; Ben de Groot <yngwin@gentoo.org>
  -files/0001-dnd_optimization.patch, -files/qt-3.3.8-mips.patch,
  -files/0002-dnd_active_window_fix.patch,
  -files/qt-3.3.8-seli-xinerama.patch,
  -files/0038-dragobject-dont-prefer-unknown.patch,
  -files/qt-3.3.8-uic-fix.patch,
  -files/0044-qscrollview-windowactivate-fix.diff,
  -files/qt-3.3.8-visibility.patch, -files/0047-fix-kmenu-widget.diff,
  -files/qt-3.3.8-fix-compiler-detection.patch, -qt-3.3.8b-r2.ebuild,
  -files/0048-qclipboard_hack_80072.patch,
  -files/qt-3.3.8-immqt+gcc-4.3.patch, -files/qt-3.3.8b-cjk-fix.patch,
  -files/qt-ulibc.patch:
  Remove qt-3.3.8b-r2.ebuild and patches, which are in tree now

*qt-3.3.8b-r2 (11 Jun 2009)

  11 Jun 2009; Dror Levin <spatz@psybear.com>
  +files/0001-dnd_optimization.patch, +files/qt-3.3.8-mips.patch,
  +files/0002-dnd_active_window_fix.patch,